force-app/main/default/objects/Hospital_Admission__c/Hospital_Admission__c.object-meta.xml
<CustomObject>
    <label>Hospital Admission</label>
    <nameField>
        <label>Hospital Admission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospital Admissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>