force-app/main/default/objects/Hospital_Admission__c/fields/Admit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Admit_DateTime__c</fullName>
    <label>Admit DateTime</label>
    <type>DateTime</type>
</CustomField>