force-app/main/default/objects/Hospital_Admission__c/fields/Chief_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Chief_Complaint__c</fullName>
    <label>Chief Complaint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>