force-app/main/default/objects/Hospital_Admission__c/fields/Current_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Current_Insurance__c</fullName>
    <label>Current Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>