force-app/main/default/objects/Hospital_Admission__c/fields/Discharge_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Discharge_DateTime__c</fullName>
    <label>Discharge DateTime</label>
    <type>DateTime</type>
</CustomField>