force-app/main/default/objects/Hospital_Admission__c/fields/Latest_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Latest_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Discharge</label>
    <referenceTo>Admission_Discharge__c</referenceTo>
    <relationshipLabel>Hospital Admissions</relationshipLabel>
    <relationshipName>Hospital_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>