force-app/main/default/objects/Hospital_Admission__c/fields/Level_Of_Care__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Care__c</fullName>
    <label>Level Of Care</label>
    <length>255</length>
    <type>Text</type>
</CustomField>