force-app/main/default/objects/Hospital_Admission__c/fields/Non_Sponsor_MRNs__c.field-meta.xml
<CustomField>
    <fullName>Non_Sponsor_MRNs__c</fullName>
    <label>Non Sponsor MRNs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>