force-app/main/default/objects/Hospital_Admission__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Hospital Admissions</relationshipLabel>
    <relationshipName>Hospital_Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>