force-app/main/default/objects/Hospital_Admission__c/fields/Patient_Class__c.field-meta.xml
<CustomField>
    <fullName>Patient_Class__c</fullName>
    <label>Patient Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>