force-app/main/default/objects/Hospital_Admission__c/fields/Primary_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnoses__c</fullName>
    <label>Primary Diagnoses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>