force-app/main/default/objects/Hospital_Admission__c/fields/Primary_Icd10_Codes__c.field-meta.xml
<CustomField>
    <fullName>Primary_Icd10_Codes__c</fullName>
    <label>Primary Icd10 Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>