force-app/main/default/objects/Hospital_Admission__c/fields/Reset__c.field-meta.xml
<CustomField>
    <fullName>Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset</label>
    <type>Checkbox</type>
</CustomField>