force-app/main/default/objects/Hospital_Admission__c/fields/Secondary_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Diagnoses__c</fullName>
    <label>Secondary Diagnoses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>