force-app/main/default/objects/Hospital_Admission__c/fields/Secondary_Icd10_Codes__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Icd10_Codes__c</fullName>
    <label>Secondary Icd10 Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>