force-app/main/default/objects/Hospital_Admission__c/fields/Stay_UUID__c.field-meta.xml
<CustomField>
    <fullName>Stay_UUID__c</fullName>
    <label>Stay UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>