force-app/main/default/objects/Hospital_Admission__c/fields/Was_Discharged_Home_From_SNF__c.field-meta.xml
<CustomField>
    <fullName>Was_Discharged_Home_From_SNF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Discharged Home From SNF</label>
    <type>Checkbox</type>
</CustomField>